--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "react-spinners": "^0.13.8"
   },
   "scripts": {
     "dev": "vite",
